[jdk] java version bumped (jdk7->8)